--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,6 +170,219 @@
                 </section>
         <!-- end news section -->
 
+        <section id="week8" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            
+                            <h2 class="section-title">Week 8</h2> <!-- begin week 8 summary -->
+                            <h4 class="section-title">Continuing on our Final Projects!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were so excited to see all of your students’ enthusiasm as we wrapped up Week 8 of our Spring 2022 
+                    Spartan Girls Who Code Program! This week, students continued to work on their final project!   
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Bonus Hour</h4>
+                    <p>
+                        This week's Bonus Hour will take place Thursday, <b>4/14</b> from 7:00-8:00p ET and is open to all 
+                        SGWC participants. SGWC mentors will be available on Zoom during the bonus hour to resolve 
+                        technical difficulties, dive deeper into the coding concepts we've learned, or talk about 
+                        computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour will always be the same as the password from the
+                        previous Saturday's meeting (sent via email only).
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                    </ul>
+                    <h4>2. Feedback</h4>
+                    <p>
+                        Us mentors are paying attention! This past week, we have left feedback for each one of our students. 
+                        If you would like to see it, you can find that in CodeHS under one of your assignments! 
+                        The assignment button will be colored pink or dark blue. 
+                    </p>
+                    <h4>3. GirlsGetMath@Dearborn</h4>
+                    <p>
+                        University of Michigan is offering an applied math summer camp this summer for high school girls who are interested in 
+                        mathematics and would like to further their curiosity. It is called <a href="https://sites.google.com/umich.edu/ggmdearborn">GirlsGetMath@Dearborn</a> 
+                        and takes place July 25, 2022 - July 28, 2022.  
+                    </p>
+                    <p>
+                        The program is free for all admitted students. The application deadline is May 31st. For more information,  visit:
+                        <a href="https://sites.google.com/umich.edu/ggmdearborn">https://sites.google.com/umich.edu/ggmdearborn</a>
+                    </p>
+                    <h4>4. The Joy of Coding</h4>
+                    <p>
+                        Electrical and Computer Engineering at the University of Michigan is offering an online course that high school 
+                        students can participate in this summer. It is called <a href="https://joyofcoding.eecs.umich.edu/">The Joy Of Coding</a> 
+                        and takes place June 22, 2022 - August 3, 2022. 
+                    </p>
+                    <p>
+                       The Joy of Coding online course has been specially created for anyone who wants to experience first-hand the power 
+                       and thrill of coding computers to do amazing things. Created with high school students in mind, it is a great way 
+                       for anyone to step into the wondrous world of coding. You’ll learn by doing and experience how coding powers apps 
+                       such as Snapchat and TikTok. 
+                    </p>
+                    <p>
+                        The cost of the program is $99 plus tax per student. Need-based financial aid is available. 
+                        For more information, visit: <a href="https://joyofcoding.eecs.umich.edu/">https://joyofcoding.eecs.umich.edu/</a>
+                    </p>
+                    <h4>5. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                        <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                        Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                        Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                        or recommendations!
+                    </p>
+                    <h4>6. Looking Ahead</h4>
+                    <p>
+                        We'll see you again on Saturday, <b>4/16 at 10a ET</b> for our ninth SGWC meeting of the spring, where we will be reviewing all that we’ve learned so far!
+                    </p>
+                    <h4>7. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    To start off this week, we reviewed what we’ve learned so far with a quick Kahoot!
+                </p>
+                <p>
+                    After our ice breaker, we went directly to our spotlight, where our students learned about Ayanna Howard,
+                     a roboticist, who followed her passion to build robots to assist students with special needs.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/7Z0dwptemn0"></iframe>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Watch this video to learn more about Ayanna Howard’s inspiring journey!</i></p>
+                    </div>
+                </div>
+                <p>
+                    Once our students finished sharing their thoughts on Ayanna’s experiences and how those can inspire us, we jumped right into project work time.
+                </p>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, and what students
+                    are looking forward to at next Saturday's session. Responses to our weekly feedback survey were again quite positive, but don't 
+                    hesitate to reach out to info@spartangwc.org if you have any questions or concerns!
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    Continuing our mentor spotlight series, we are highlighting our Teal Lead Mentors this week!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/natalieKnisley750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Natalie Knisley</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/sanayeLewis750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Sanaye Lewis</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-6" align="middle"> <!-- Natalie -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year majoring in Mechanical Engineering!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                My dad is a software developer and he encouraged me to take a Java 
+                                class my Sophomore year of high school. 
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I started a coding club at a local elementary school when I was a junior 
+                                in high school which I was able to teach again virtually during Fall 2020.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope I that I can continue with K-12 outreach.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Believe that you can overcome and obstacles and continue to push forward. 
+                            </p>
+                        </div>
+                        <div class="col-md-6" align="middle"> <!-- Sanaye -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a first-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I took an AP Computer Science course in high school, and I did Kode With Klossy 
+                                over the summer, and I loved it, which got me interested in coding.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I have created a mobile app that gives you  a list of different dessert
+                                 recipes based on what region around the world you choose from as a way 
+                                 to try desserts from different cultures.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I would like to get involved in research that uses computer science in a 
+                                cognitive science research area because I am very interested in doing interdisciplinary research.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                My advice is to have patience with yourself because learning new things can be 
+                                very difficult and frustrating at times and you will make lots of mistakes, but 
+                                in time you will grow, learn, and improve. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We look forward to seeing everyone again on Saturday, 4/16! :)
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+                </div>
+            </section> <!-- end week 8 summary -->
+
         <section id="week7" class="news bg-white">
             <div class="container">
                 <div class="headline text-center">
