--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -257,7 +257,7 @@
                     </p>
                     <h4>6. Looking Ahead</h4>
                     <p>
-                        We'll see you again on Saturday, <b>4/23 at 10a ET</b> for our ninth SGWC meeting of the spring, where we will be reviewing all that we’ve learned so far!
+                        We'll see you again on Saturday, <b>4/23 at 10a ET</b> for our tenth SGWC meeting of the spring, where we will celebrating what we've learned this spring!
                     </p>
                     <h4>7. Questions?</h4>
                     <p>
@@ -332,7 +332,7 @@
                         <div class="col-md-3" align="middle"> <!-- Emily -->
                             <p>
                                 <b>What are you studying?</b><br>
-                                I am a second-year majoring in Mechanical Engineering and minoring in Entrepreneurship and Innovation!
+                                I am a second-year majoring in Computer Science and minoring in Entrepreneurship and Innovation!
                             </p>
                             <p>
                                 <b>How did you become interested in computer science?</b><br>
