--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -169,6 +169,226 @@
                     </div> <!--/.container -->
                 </section>
         <!-- end news section -->
+
+        <section id="week9" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            
+                            <h2 class="section-title">Week 10</h2> <!-- begin week 10 summary -->
+                            <h4 class="section-title">The Grand Finale!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were so excited to see all of your students’ enthusiasm as we wrapped up our last week of our Spring 2022 
+                    Spartan Girls Who Code Program! This week, students presented their final projects!   
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Feedback</h4>
+                    <p>
+                        Your feedback helps us improve Spartan Girls Who Code year after year! Let us know what you thought 
+                        of this spring's edition by filling out the <a href="https://forms.gle/GwnGpu29kKkmuStM7">parent post-survey</a>. If your student didn't have a chance 
+                        to share their feedback at our final meeting by filling out the <a href="https://tinyurl.com/SGWC22-Participant-Post-Survey">student post-survey</a>, please encourage 
+                        them to do so, too! 
+                    </p>
+                    <h4>2. Looking Ahead</h4>
+                    <p>
+                    Saturday, 4/23 marked the final meeting of Spartan Girls Who Code for the spring. Thanks for making it such a blast! 
+                    </p>
+                    <h4>3. Camp Infinity</h4>
+                    <p>
+                        Camp Infinity is a series of sessions that introduce girls, in grades 5 through 12, to computer and internet technologies
+                        through hands-on activities. Each session will engage students in age-appropriate topics ranging from animation and app 
+                        development to robotics programming, and robotic process automation. These series of camps run between June 20 and July 29.
+                    </p>
+                    <p>
+                        Some of their programs include:
+                        <ul>
+                            <li>Robotics Programming and Animation Creation for 5th & 6th graders </li>
+                            <li>Robotics Programming and App Development for 7th & 8th graders </li>
+                            <li>Robotic Process Automation (RPA) for 9th-12th graders</li>
+                        </ul> 
+                     </p>
+                    <p>
+                        The registration opens April 26th. For more information,  visit: <a href="https://mcwt.org/programs/list/K-12-Initiatives/CAMP-INFINITY">https://mcwt.org/programs/list/K-12-Initiatives/CAMP-INFINITY</a>
+                    </p>
+                    <h4>4. GirlsGetMath@Dearborn</h4>
+                    <p>
+                        University of Michigan is offering an applied math summer camp this summer for high school girls who are interested in 
+                        mathematics and would like to further their curiosity. It is called <a href="https://sites.google.com/umich.edu/ggmdearborn">GirlsGetMath@Dearborn</a> 
+                        and takes place July 25, 2022 - July 28, 2022.  
+                    </p>
+                    <p>
+                        The program is free for all admitted students. The application deadline is May 31st. For more information,  visit:
+                        <a href="https://sites.google.com/umich.edu/ggmdearborn">https://sites.google.com/umich.edu/ggmdearborn</a>
+                    </p>
+                    <h4>5. The Joy of Coding</h4>
+                    <p>
+                        Electrical and Computer Engineering at the University of Michigan is offering an online course that high school 
+                        students can participate in this summer. It is called <a href="https://joyofcoding.eecs.umich.edu/">The Joy Of Coding</a> 
+                        and takes place June 22, 2022 - August 3, 2022. 
+                    </p>
+                    <p>
+                       The Joy of Coding online course has been specially created for anyone who wants to experience first-hand the power 
+                       and thrill of coding computers to do amazing things. Created with high school students in mind, it is a great way 
+                       for anyone to step into the wondrous world of coding. You’ll learn by doing and experience how coding powers apps 
+                       such as Snapchat and TikTok. 
+                    </p>
+                    <p>
+                        The cost of the program is $99 plus tax per student. Need-based financial aid is available. 
+                        For more information, visit: <a href="https://joyofcoding.eecs.umich.edu/">https://joyofcoding.eecs.umich.edu/</a>
+                    </p>
+                    <h4>6. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                        <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                        Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                        Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                        or recommendations!
+                    </p>
+                    <h4>7. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    To start off this week, we played some would-you-rather to get some fun conversations started.
+                </p>
+                <p>
+                    After our ice breaker, we went directly to our live spotlight, where our students got to talk to Shannon Cawley, 
+                    a Product Owner in the Vehicle Software Updates department at Ford. Shannon shared her journey from her business 
+                    background to her current role and gave great advice to our students.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/shannon750x1000_72R.jpg" height="350">
+                            <br><br>
+                            <p><i>Shannon Cawley, Product Owner at Ford, stopped by last Saturday's meeting as a live guest spotlight!</i></p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Once our students finished asking Shannon their questions, we took a few minutes to put finishing touches on 
+                    our final projects and get ready to present them.  
+                </p>
+                <p>
+                    To celebrate our last Saturday, everyone got to show off their final projects. We loved seeing everyone’s creativity
+                    and passions reflected in their websites!
+                </p>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on their favorite parts of the club and some 
+                    feedback for future improvements.
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    To finish our spotlight series, we are highlighting our wonderful advisors this week!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/LaurieCSforALL.jpg" height="350">
+                            <br><br>
+                            <p><i>Dr. Laura Dillon</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/TeresaVandersloot750x1000r72.jpg" height="350">
+                            <br><br>
+                            <p><i>Teresa Isela VanderSloot</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-6" align="middle"> <!-- Dr. Dillon -->
+                            <p>
+                                <b>What do you do at MSU?</b><br>
+                                I'm a Professor Emeritus—which means I'm retired! At MSU, I mainly taught introduction to programming and software 
+                                engineering. In the last 5 years before retiring, I created and taught the 
+                                <a href="http://www.cse.msu.edu/~ldillon/cse-ctl/">Computational Thinking Lab</a>. I LOVED teaching this class and 
+                                recruited many Technovation and SGWC mentors from it. Now I work with MSU mentors and Teresa and Sebnem on coding clubs. 
+                                I also volunteer for many programs of the National Center for Women in Information Technology (NCWIT).
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science, and how did you get to where you are today?</b><br>
+                                Completely by accident. I was studying math at University of Michigan, when I decided to take a year off to see the USA. 
+                                In that year, I had a chance to teach programming in the business school at Eastern Montana College. Learning Cobol and 
+                                Basic a week before my students was a bit harrowing, but I really liked programming. I liked problem-solving and I liked that 
+                                programming was useful (a common "use" given for homology theory was showing that you can't comb a hairy ball flat without 
+                                creating a cowlick!). When my graduate advisor died unexpectedly while I was away, I decided to switch both majors and schools.
+                                 I got my PhD in CS from UMass Amherst five years later. I taught at UMass the next year since delivering a baby within a 
+                                 semester of starting a new job didn't sound like a smart thing to do. The following year I took a job at University of 
+                                 California Santa Barbara (UCSB), where I taught and did research in software engineering, and my husband started a PhD 
+                                 program in the ecology of lakes. We ended up back in Michigan 12 years later when MSU solved our two-body problem by 
+                                 offering both my husband and I jobs. As a professor at MSU, I got to travel the world to give talks and teach programming 
+                                 and software engineering. A favorite was <a href="http://rwandancampforgirlsinit.blogspot.com">three summer camps for 
+                                secondary school girls and their teachers in Rwanda!</a>
+                            </p>
+                            <p>
+                                <b>What's your favorite part about Spartan Girls Who Code?</b><br>
+                                The coders! Especially coders who don't have a clue at the start and are amazed to learn what they can do with code by the end. 
+                                It is so much fun to see the light gradually turn on! I love seeing them gain confidence as they realize that programming just 
+                                takes practice.
+                            </p>
+                            <p>
+                                <b>What message would you like to leave with our students and mentors moving forward?</b><br>
+                                My favorite Grace Hopper quote: "A ship in port is safe, but that's not what ships are built for."
+                            </p>
+                        </div>
+                        <div class="col-md-6" align="middle"> <!-- Teresa -->
+                            <p>
+                                <b>What do you do at MSU?</b><br>
+                                I'm the Director of Women in Engineering, Recruitment and K-12 Outreach!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science, and how did you get to where you are today?</b><br>
+                                I was the advisor for computer science major for over ten years. In this role, I met with hundreds of students and it was evident there were barely any women and other underrepresented students in the major. This spurred me and a colleague to help start a book club, which eventually became our MSU Women in Computing club. I also helped start a statewide conference called MICWIC and a non-profit organization, iTEC. The aim of these programs was to increase the diversity in CS. As a result of my work, the Dean created my current position and asked me to take on this role.
+                            </p>
+                            <p>
+                                <b>What's your favorite part about Spartan Girls Who Code?</b><br>
+                                I enjoy observing the mentor/mentee relationships. I also love to see the students getting excited as they are learning new concepts and gaining confidence.
+                            </p>
+                            <p>
+                                <b>What message would you like to leave with our students and mentors moving forward?</b><br>
+                                Dream big! Believe in your future, don't be afraid to ask for help along the way and utilize your networks. You will meet people who genuinely want you to succeed. Explore and learn CS. Computational literacy is a necessary skill for your future. Your ideas, thoughts and problem solving skills are needed at the table.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Thank you all for a great 10 weeks and we look forward to seeing you again next year! :)
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+                </div>
+            </section> <!-- end week 10 summary -->
         
         <section id="week9" class="news bg-white">
             <div class="container">
