--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>MSU x İzmir SEV Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,6 +17,8 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
+
+					<!-- Logo -->
 					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
 					<nav id="nav">
 						<ul>
@@ -24,23 +26,13 @@
 							<li class="submenu">
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
+									<li><a href="left-sidebar.html">Home</a></li>
+									<li><a href="right-sidebar.html">News</a></li>
+									<li><a href="no-sidebar.html">Resources</a></li>
+									<li><a href="contact.html">Team</a></li>
+									<li><a href="no-sidebar.html">Supporters</a></li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -57,7 +49,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>U 22 MSU x İzmir SEV Coding Club</h2>
 						</header>
 						<p>This is <strong>Twenty</strong>, a free
 						<br />
