--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -19,12 +19,12 @@
 				<header id="header" class="alt">
 
 					<!-- Logo -->
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#">MENU</a>
 								<ul>
 									<li><a href="left-sidebar.html">Home</a></li>
 									<li><a href="right-sidebar.html">News</a></li>
@@ -47,18 +47,18 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-
+						<p>Summer <strong>2022</strong>
+						<br />
+						<br />
 						<header>
-							<h2>U 22 MSU x İzmir SEV Coding Club</h2>
+							<h2>MSU x İzmir SEV Coding Club</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p><strong>Teach a girl</strong> to code and she will <strong>change the world.</strong>
 						<br />
-						responsive template
-						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						</p>
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">About Us</a></li>
 							</ul>
 						</footer>
 
@@ -217,18 +217,36 @@
 						</section>
 
 				</article>
+			
+			<!-- CTA -->
+				<section id="cta">
+
+					<header>
+						<h2><strong>CONTACT US</strong></h2>
+						<p>428 S. Shaw Lane 
+						<br /> 
+						Engineering Building, Room 1410A
+						<br /> 
+						East Lansing, MI 48824
+						<br /> 
+						Phone: (517)884-0054
+						<br /> 
+						Email: <a href="mailto:turkeycc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">turkeycc@egr.msu.edu</a>
+						</p>
+					</header>
+
+				</section>
 
 			<!-- CTA -->
 				<section id="cta">
 
 					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<h2><strong>NON DISCRIMINATION</strong></h2>
+						<p>MSU Women in Engineering does not unlawfully discriminate. All events and programs are open to students of all genders.</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="https://civilrights.msu.edu/policies/" class="button primary">Notice of <strong>NON DISCRIMINATION</strong></a></li>
 						</ul>
 					</footer>
 
