--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -231,7 +231,7 @@
 						<br /> 
 						Phone: (517)884-0054
 						<br /> 
-						Email: <a href="mailto:turkeycc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">turkeycc@egr.msu.edu</a>
+						Email: <a href="mailto:turkeycc@egr.msu.edu?subject=[MSU x İzmir SEV] **REPLACE WITH TOPIC**">turkeycc@egr.msu.edu</a>
 						</p>
 					</header>
 
