--- a/turkeycc/contact.html
+++ b/turkeycc/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact - Twenty by HTML5 UP</title>
+		<title>Team - MSU x İzmir SEV Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,74 +17,116 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
+							<li class="current"><a href="index.html">HOME</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#">MENU</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
+									<li><a href="left-sidebar.html">Home</a></li>
+									<li><a href="right-sidebar.html">News</a></li>
+									<li><a href="no-sidebar.html">Resources</a></li>
+									<li><a href="contact.html">Team</a></li>
+									<li><a href="no-sidebar.html">Supporters</a></li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
-
+			
 			<!-- Main -->
-				<article id="main">
+			<div id="main">
+				<div class="inner">
+					<section>
+						<div class="box alt">
+							<div class="row gtr-uniform">
+								<div class="col-12"><span class="image fit"><img src="images/2019 MSU mentors1152x326r72.jpg" alt="" /></span></div>
 
-					<header class="special container">
-						<span class="icon solid fa-envelope"></span>
-						<h2>Get In Touch</h2>
-						<p>Use the form below to give /dev/null a piece of your mind.</p>
-					</header>
+								<!-- Mentors -->
+								<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
 
-					<!-- One -->
-						<section class="wrapper style4 special container medium">
-
-							<!-- Content -->
-								<div class="content">
-									<form>
-										<div class="row gtr-50">
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="7"></textarea>
-											</div>
-											<div class="col-12">
-												<ul class="buttons">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
+									<center>
+										<h3>Andrew</h3>
+										Senior<br> Computer Science
+									</center>
 								</div>
 
-						</section>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
+									<center>
+										<h3>Dalety</h3>
+										Sophomore<br>
+										Mechanical Engineering
+									</center>
+								</div>
 
-				</article>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon " /></span>
+									<center>
+										<h3>Jonathon</h3>
+										Senior<br> Computer Science
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
+									<center>
+										<h3>Judy</h3>
+										Senior<br>
+										Computer Science
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
+									<center>
+										<h3>Khushi</h3>
+										Junior<br> Computer Science
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
+									<center>
+										<h3>Robin</h3>
+										Year<br> Major
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
+									<center>
+										<h3>Sanaye</h3>
+										Junior<br> Computer Science
+									</center>
+								</div>
+
+								<!-- Advisors -->
+								<div class="col-12"><span><center><h2>MSU &amp; İzmir SEV Advisers</h2><center></span></div>
+
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
+									<center>
+										<h3>Teresa</h3>
+										Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
+									<center>
+										<h3>Sebnem</h3>
+										Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
+									</center>
+								</div>
+
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/LaurieCSforALL.jpg" alt="Photo of Laura" /></span>
+									<center>
+										<h3>Laura</h3>
+										Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
+									</center>
+								</div>
+
+							</div>
+						</div>
+					</section>
+				</div>
+			</div>
 
 			<!-- Footer -->
 				<footer id="footer">
