team filename changes

--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -26,10 +26,10 @@
 							<li class="submenu">
 								<a href="#">MENU</a>
 								<ul>
-									<li><a href="left-sidebar.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li><a href="right-sidebar.html">News</a></li>
 									<li><a href="no-sidebar.html">Resources</a></li>
-									<li><a href="contact.html">Team</a></li>
+									<li><a href="tcc_team.html">Team</a></li>
 									<li><a href="no-sidebar.html">Supporters</a></li>
 								</ul>
 							</li>
