--- a/turkeycc/tcc_team.html
+++ b/turkeycc/tcc_team.html
@@ -24,10 +24,10 @@
 							<li class="submenu">
 								<a href="#">MENU</a>
 								<ul>
-									<li><a href="left-sidebar.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li><a href="right-sidebar.html">News</a></li>
 									<li><a href="no-sidebar.html">Resources</a></li>
-									<li><a href="contact.html">Team</a></li>
+									<li><a href="tcc_team.html">Team</a></li>
 									<li><a href="no-sidebar.html">Supporters</a></li>
 								</ul>
 							</li>
@@ -48,52 +48,50 @@
 
 								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
 									<center>
-										<h3>Andrew</h3>
-										Senior<br> Computer Science
+										<h3>Andrew McDonald</h3>
+										Senior | Computer Science
 									</center>
 								</div>
 
 								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
 									<center>
-										<h3>Dalety</h3>
-										Sophomore<br>
-										Mechanical Engineering
+										<h3>Dalety Aveiro</h3>
+										Sophomore | Applied Engineering Science
 									</center>
 								</div>
 
 								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon " /></span>
 									<center>
-										<h3>Jonathon</h3>
-										Senior<br> Computer Science
+										<h3>Jonathon Moore</h3>
+										Senior | Computer Science
 									</center>
 								</div>
 
 								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
 									<center>
-										<h3>Judy</h3>
-										Senior<br>
-										Computer Science
+										<h3>Judy Effendi</h3>
+										Junior | Computer Science
 									</center>
 								</div>
 
 								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
 									<center>
-										<h3>Khushi</h3>
-										Junior<br> Computer Science
+										<h3>Khushi Vora</h3>
+										Sophomore | Computer Science
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
+								<div class="col-4"><span class="image fit"><img src="" alt="Photo of Khushi" /></span>
 									<center>
-										<h3>Robin</h3>
-										Year<br> Major
+										<h3>Robin Onsay</h3>
+										Year | Major
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
+								<div class="col-4"><span class="image fit"><img src="" alt="Photo of Khushi" /></span>
 									<center>
-										<h3>Sanaye</h3>
-										Junior<br> Computer Science
+										<h3>Sanaye Lewis</h3>
+										Freshman | Computer Science
 									</center>
 								</div>
 
