Home Page changes

--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -70,85 +70,74 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<!-- <span class="icon solid fa-chart-bar"></span> -->
+						<h2>A partnership between the 
+						<br />	
+						<strong>College of Engineering at Michigan State University </strong>
+						<br />	
+						and <strong> Izmir SEV Coding Clubs</strong></h2>
+						<p>. MSU x Izmir SEV Coding Clubs offer computing instruction designed to be inclusive of all — but especially of 
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						girls and economically underrepresented youth in Turkey. MSU student-mentors guide secondary school-participants 
+						<br /> 
+						from Turkey through a fun, engaging and empowering learning experience. Together, mentors and participants explore
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+						how computing enables advances in virtually all disciplines. They meet diverse role models, who are discovering 
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						technologies that transform lives. Participants practice computational skills using Python Turtle Graphics.
+						</p>
 					</header>
 
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
-								<div class="col-8 col-12-narrower">
+								<!-- <div class="col-8 col-12-narrower"> -->
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2><strong>Summer 2022 Session</strong></h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-									<footer>
-										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
-										</ul>
-									</footer>
+									<p>• May 30 through June 10.
+									<br />
+									• Monday through Friday 4:30p – 6:00p Turkey time.
+									<br />
+									<br />
+									The Summer 2022 MSU x Izmir SEV Coding Club will have 30 participants 
+									and will meet virtually in accordance with current MSU policy for Youth Programs. 
+									Participants will receive the Zoom login information by email in the week 
+									before the first meeting. The information will be sent to the email address(es) 
+									provided at registration. Participants should white-list <a href="#">turkeycc@egr.msu.edu</a> to 
+									prevent notices from going to spam.
+									<br />
+									<br />
+									Remote meetings require use of a device with at least the capability of a Chromebook connected
+									to the internet. Although not required, we recommend the device is equipped with a webcam and 
+									microphone to permit full engagement with mentors and other participants.
+									<br />
+									Course software will run best in Chrome, but is compatible with other web browsers. The most recent version of Zoom should be used.
 
-								</div>
-								<div class="col-4 col-12-narrower imp-narrower">
-
-									<ul class="featured-icons">
-										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon solid fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon solid fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
+									</p>									
+									<ul class="buttons">
+										<li><a href="#" class="button">Latest Updates</a></li>
 									</ul>
 
-								</div>
+								<!-- </div> -->
 							</div>
 						</section>
 
 					<!-- Two -->
 						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
+							<div class="row">								
+								
 
 									<section>
-										<span class="icon solid featured fa-check"></span>
+										<!-- <span class="icon solid featured fa-check"></span> -->
 										<header>
-											<h3>This is Something</h3>
+											<h2><strong>Program Objective</strong></h2>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
 
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
+								
 							</div>
 						</section>
 
@@ -156,7 +145,7 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2><strong>Learn More</strong></h2>
 							</header>
 
 							<div class="row">
