resources and fixes

--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -28,7 +28,7 @@
 								<ul>
 									<li><a href="index.html">Home</a></li>
 									<li><a href="right-sidebar.html">News</a></li>
-									<li><a href="no-sidebar.html">Resources</a></li>
+									<li><a href="resources.html">Resources</a></li>
 									<li><a href="tcc_team.html">Team</a></li>
 									<li><a href="no-sidebar.html">Supporters</a></li>
 								</ul>
