--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -240,7 +240,7 @@
 											Michigan State University<br>
 											East Lansing, MI 48824<br>
 											Phone: (517)884-0054<br>
-											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
+											Email: <a href="mailto:turkeycc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">turkeycc@egr.msu.edu</a>
 									</div>
 
 									<!-- links -->
@@ -249,7 +249,7 @@
 											<ul>
 													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
 													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
+													<li><a href="https://www.sevizmir.k12.tr/" title="İzmir SEV">İzmir SEV</a></li>
 											</ul>
 									</div>
 
