--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -12,11 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="supp is-preload">
+	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="page-wrapper">
-			
-        <!-- Header -->
+
+
+                    <!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
 					<nav id="nav">
@@ -35,6 +36,7 @@
 						</ul>
 					</nav>
 				</header>
+
 
 				<!-- Main -->
 					<div id="main">
@@ -276,11 +278,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.dropotron.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
 
 	</body>
 </html>
