--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -144,7 +144,7 @@
 									</tbody>
 								</table>
 
-								<h2 id="donate">How to donate</h2>
+								<!-- <h2 id="donate">How to donate</h2>
 								<p>
 									You may charge your tax-deductible gift using the University Development Online Gift Cart: <a href="https://www.givingto.msu.edu/gift/index.cfm" target="_blank">https://www.givingto.msu.edu/gift/index.cfm</a>.
 								</p>
@@ -176,7 +176,7 @@
 									Ph: 800-232-4678 (Toll Free)<br>
 								</p>
 
-								<p>Banner photo: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-aljjw" target="_blank">Belize tropical landscape</a>.
+								<p>Banner photo: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-aljjw" target="_blank">Belize tropical landscape</a>. -->
 
 							</div>
 
