--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -61,11 +61,11 @@
 													İzmir Sev
 												</a>
 											</td>
-											<td>
+											<!-- <td>
 												<a href="https://www.acm.org/" target="_blank">
 													ACM
 												</a>
-											</td>
+											</td> -->
 										</tr>
 
 										<tr>
@@ -79,20 +79,20 @@
 													<img src="images/Sponsor/download.png" alt="">
 												</a>
 											</td>
-											<td>
+											<!-- <td>
 												<a href="https://www.acm.org/" target="_blank">
 													<img src="images/Sponsor/acm_rgb_grad_pos240x120r72.png" alt="Logo for the Association of Computing Machinery">
 												</a>
-											</td>
+											</td> -->
 										</tr>
 
 										<tr>
-											<td>
+											<!-- <td>
 												<a href="https://www.sigsoft.org/" target="_blank">
 													ACM SIGSOFT
 												</a>
-											</td>
-											<td>
+											</td> -->
+											<!-- <td>
 												<a href="https://www.ieee.org//" target="_blank">
 													IEEE
 											</td>
@@ -100,11 +100,11 @@
 												<a href="https://tc.computer.org/tcse/" target="_blank">
 													IEEE Technical Council on Software Engineering
 												</a>
-											</td>
+											</td> -->
 										</tr>
 
 										<tr>
-											<td>
+											<!-- <td>
 												<a href="https://www.sigsoft.org/" target="_blank">
 													<img src="images/Sponsor/sigsoft240x120r72.png" alt="Logo for the Special Interest Group in Software Engineering">
 												</a>
@@ -117,7 +117,7 @@
 												<a href="https://tc.computer.org/tcse/" target="_blank">
 													<img src="images/Sponsor/TCSE-Logo-blueText-CMYK-240x120r72.png" alt="Logo for the Technical ">
 												</a>
-											</td>
+											</td> -->
 										</tr>
 									</tbody>
 									<!--
@@ -130,7 +130,7 @@
 								-->
 								</table>
 
-								<h2>Individual Supporters</h2>
+								<!-- <h2>Individual Supporters</h2>
 
 								<table class="alt align-center">
 									<tbody>
@@ -141,7 +141,7 @@
 												</a>
 											</td>
 										</tr>
-									</tbody>
+									</tbody> -->
 								</table>
 
 								<!-- <h2 id="donate">How to donate</h2>
