--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -124,22 +124,22 @@
 							</div>
 						</section>
 
-					<!-- Two -->
+					<!-- Two
 						<section class="wrapper style1 container special">
 							<div class="row">								
 								
 
-									<section>
-										<!-- <span class="icon solid featured fa-check"></span> -->
-										<header>
+									<!-- <section>
+									<!-- <span class="icon solid featured fa-check"></span> -->
+										<!-- <header>
 											<h2><strong>Program Objective</strong></h2>
 										</header>
 										<p>Spread the knowledge of coding!</p>
-									</section>
+									</section> --> -->
 
 								
-							</div>
-						</section>
+							<!-- </div>
+						</section> --> -->
 
 					<!-- Three -->
 						<section class="wrapper style3 container special">
